React final ready

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_RICK="https://rickandmortyapi.com/api"
+REACT_APP_API_KEY=AIzaSyAqffYZmzj8jb_UpL15LfZaPWaBVLwygxY
+REACT_APP_AUTH_DOMAIN=bro-oliveira.firebaseapp.com
